--- a/question2/src/components/Sidebar.css
+++ b/question2/src/components/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar-container {
-    position: fixed;
-    margin: 10px;
+    position: absolute;
+    margin: 60px 10px 10px 10px;
     padding: 5px;
     height:100%;
     width:20%;
@@ -13,9 +13,7 @@
 .sidebar-container p{
     padding: 10px;
     margin: 30px;
-    border:solid 2px rgb(43, 36, 36);
-    border-radius: 15px;
-    
+
 }
 
 .sidebar-container p:hover{
@@ -23,8 +21,12 @@
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .sidebar-container{
-        display: none;
+@media (min-width: 768px) {
+
+    .sidebar-container p{
+        padding: 10px;
+        margin: 30px;
+        border:solid 2px rgb(43, 36, 36);
+        border-radius: 15px;
     }
 }
